--- a/charts/jx-pipelines-visualizer-proxy/Chart.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 description: Jenkins-X Custom charts
 name: jx-pipelines-visualizer-proxy
 icon: https://raw.githubusercontent.com/jenkins-x/jenkins-x-website/master/images/logo/jenkinsx-icon-color.svg
-version: 0.0.1
-appVersion: latest
+version: 0.0.2
+appVersion: 0.0.2
