--- a/charts/jx-pipelines-visualizer-proxy/Chart.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/Chart.yaml
@@ -3,3 +3,4 @@ description: Jenkins-X Custom charts
 name: jx-pipelines-visualizer-proxy
 icon: https://raw.githubusercontent.com/jenkins-x/jenkins-x-website/master/images/logo/jenkinsx-icon-color.svg
 version: 0.0.4
+appVersion: 0.0.4
