--- a/charts/jx-pipelines-visualizer-proxy/templates/deployment.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/templates/deployment.yaml
@@ -28,15 +28,14 @@ spec:
     spec:
       containers:
       - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: Always
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        {{- with .Values.image.pullPolicy }}
+        imagePullPolicy: {{ . }}
+        {{- end }}
         args:
-        {{- range $key, $value := .Values.extraArgs }}
-          {{- if $value }}
-          - --{{ $key }}={{ $value }}
-          {{- else }}
-          - --{{ $key }}
-          {{- end }}
+        {{- with .Values.extraArgs.keycloakgroup }}
+        - -keycloak-group
+        - {{ . }}
         {{- end }}
         {{- with .Values.config.namespace }}
         - -namespace
