--- a/charts/jx-pipelines-visualizer-proxy/templates/ingress.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/templates/ingress.yaml
@@ -38,64 +38,25 @@ spec:
     http:
       paths:
       - pathType: {{ $pathType }}
+        {{- if eq $pathType "Prefix" }}
+        path: {{ $path | default "/" }}
+        {{- end }}
         backend:
           service:
             name: {{ include "jxpipelines.fullname" $ }}
             port:
               name: http
-        {{- if eq $pathType "Prefix" }}
-        path: {{ $path | default "/" }}
-        {{- end }}
   {{- end }}
 {{- end }}
 
   {{- if .Values.ingress.tls.enabled }}
   tls:
-  {{- range $name, $secret := .Values.ingress.tls.secrets }}
-  {{- if and $secret.b64encodedCertificate $secret.b64encodedCertificateKey }}
-  - secretName: {{ include "jxpipelines.fullname" $ }}-tls-{{ $name }}
-  {{- else }}
-  - secretName: {{ $name }}
-  {{- end }}
+    secretName: "{{ .Values.ingress.secretname }}"
     hosts:
-    {{- if $secret.hosts }}
-    {{- range $secret.hosts }}
-    - {{ . }}
-    {{- end }}
-    {{- else }}
     {{- range $.Values.ingress.hosts }}
     - {{ . }}
     {{- end }}
-    {{- end }}
-  {{- end }}
   {{- end }}
 
-{{- if .Values.ingress.basicAuth.enabled }}
----
-apiVersion: v1
-data:
-  auth: {{ .Values.ingress.basicAuth.authData | quote }}
-kind: Secret
-metadata:
-  name: jx-pipelines-visualizer-basic-auth
-type: Opaque
-{{- end -}}
-
-{{- if .Values.ingress.tls.enabled -}}
-{{- range $name, $secret := .Values.ingress.tls.secrets -}}
-{{- if and $secret.b64encodedCertificate $secret.b64encodedCertificateKey }}
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ include "jxpipelines.fullname" $ }}-tls-{{ $name }}
-  labels: {{- include "jxpipelines.labels" $ | nindent 4 }}
-type: kubernetes.io/tls
-data:
-  tls.crt: {{ $secret.b64encodedCertificate | quote }}
-  tls.key: {{ $secret.b64encodedCertificateKey | quote }}
-{{- end -}}
-{{- end -}}
-{{- end -}}
 
 {{- end -}}
