--- a/charts/jx-pipelines-visualizer-proxy/values.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/values.yaml
@@ -78,11 +78,10 @@ service:
   annotations: {}
 
 ingress:
-  enabled: false
+  enabled: true
   class: nginx
   labels: {}
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
     nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
 
@@ -90,33 +89,14 @@ ingress:
   pathType: "Prefix"
   path: /oauth2
 
-  # hosts:
-  # - pipelines.example.com
-  # - pipelines.foo.bar
+  secretname: tls-c3xsrv-com-p
   hosts:
     - dashboard-jx.example.com
-
-  # enables basic auth secret to be created
-  basicAuth:
-    enabled: false
-    authData: ""
-
   tls:
     enabled: true
-
-    # secrets:
-    #   embedded:
-    #     b64encodedCertificate: e30k
-    #     b64encodedCertificateKey: e30k
-    #     hosts:
-    #     - pipelines.example.com
-    #   existing-secret-name: {}
-    #   existing-secret-name-with-custom-hosts:
-    #     hosts:
-    #     - pipelines.foo.bar 
     secrets:
       hosts:
-      - dashboard-jx.example.com
+        - dashboard-jx.example.com
 
 istio:
   enabled: false
