--- a/charts/jx-pipelines-visualizer-proxy/templates/deployment.yaml
+++ b/charts/jx-pipelines-visualizer-proxy/templates/deployment.yaml
@@ -37,34 +37,6 @@ spec:
         - --keycloak-group
         - {{ . }}
         {{- end }}
-        {{- with .Values.config.namespace }}
-        - -namespace
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.resyncInterval }}
-        - -resync-interval
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.archivedLogsURLTemplate }}
-        - -archived-logs-url-template
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.archivedPipelinesURLTemplate }}
-        - -archived-pipelines-url-template
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.archivedPipelineRunsURLTemplate }}
-        - -archived-pipelineruns-url-template
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.pipelineTraceURLTemplate }}
-        - -pipeline-trace-url-template
-        - {{ . }}
-        {{- end }}
-        {{- with .Values.config.logLevel }}
-        - -log-level
-        - {{ . }}
-        {{- end }}
         {{- if .Values.pod.env }}
         env:
         - name: XDG_CONFIG_HOME
@@ -82,7 +54,7 @@ spec:
         {{- end }}
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: {{ .Values.service.port }}
         livenessProbe:
           tcpSocket:
             port: http
